CLI/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    PRINT
    SHOW

Grammar

Rule 0     S' -> programa
Rule 1     programa -> instruccion programa
Rule 2     programa -> instruccion
Rule 3     instruccion -> instruccion_asignacion
Rule 4     instruccion -> instruccion_wave
Rule 5     instruccion -> instruccion_track
Rule 6     instruccion -> instruccion_play
Rule 7     instruccion -> instruccion_return
Rule 8     instruccion_return -> RETURN PAREN_IZQ expresion PAREN_DER PUNTOYCOMA
Rule 9     tipo_dato -> TYPE_INT
Rule 10    tipo_dato -> TYPE_FLOAT
Rule 11    tipo_dato -> TYPE_BOOL
Rule 12    tipo_dato -> TYPE_STRING
Rule 13    tipo_dato -> TYPE_ARRAY
Rule 14    tipo_dato -> TYPE_TIME
Rule 15    tipo_dato -> TYPE_FREQ
Rule 16    tipo_dato -> TYPE_VOL
Rule 17    tipo_dato -> TYPE_ENV
Rule 18    tipo_dato -> TYPE_CORO
Rule 19    instruccion_asignacion -> tipo_dato ID IGUAL expresion PUNTOYCOMA
Rule 20    instruccion_wave -> WAVE_TYPE ID IGUAL WAVE_FUNC PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA
Rule 21    instruccion_track -> TRACK ID IGUAL CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA
Rule 22    instruccion_play -> ENGINE PUNTO PLAY PAREN_IZQ expresion PAREN_DER PUNTOYCOMA
Rule 23    expresion -> ID
Rule 24    expresion -> UNIDAD
Rule 25    expresion -> NUMERO
Rule 26    expresion -> CADENA
Rule 27    expresion -> TRUE
Rule 28    expresion -> FALSE
Rule 29    expresion -> NOTA_MUSICAL
Rule 30    expresion -> IMPORT PAREN_IZQ CADENA PAREN_DER
Rule 31    expresion -> expresion CONCAT expresion
Rule 32    expresion -> expresion PLUS expresion
Rule 33    expresion -> expresion MINUS expresion
Rule 34    expresion -> expresion TIMES expresion
Rule 35    lista_elementos -> expresion COMA lista_elementos
Rule 36    lista_elementos -> expresion
Rule 37    argumentos -> argumento COMA argumentos
Rule 38    argumentos -> argumento
Rule 39    argumentos -> <empty>
Rule 40    argumento -> MINUS NUMERO
Rule 41    argumento -> MINUS UNIDAD
Rule 42    argumento -> NUMERO
Rule 43    argumento -> UNIDAD
Rule 44    argumento -> CADENA
Rule 45    argumento -> ID
Rule 46    argumento -> NOTA_MUSICAL

Terminals, with rules where they appear

CADENA               : 26 30 44
COMA                 : 35 37
CONCAT               : 31
CORCHETE_DER         : 21
CORCHETE_IZQ         : 21
DIVIDE               : 
ENGINE               : 22
FALSE                : 28
ID                   : 19 20 21 23 45
IGUAL                : 19 20 21
IMPORT               : 30
MINUS                : 33 40 41
NOTA_MUSICAL         : 29 46
NUMERO               : 25 40 42
PAREN_DER            : 8 20 22 30
PAREN_IZQ            : 8 20 22 30
PLAY                 : 22
PLUS                 : 32
PRINT                : 
PUNTO                : 22
PUNTOYCOMA           : 8 19 20 21 22
RETURN               : 8
SHOW                 : 
TIMES                : 34
TRACK                : 21
TRUE                 : 27
TYPE_ARRAY           : 13
TYPE_BOOL            : 11
TYPE_CORO            : 18
TYPE_ENV             : 17
TYPE_FLOAT           : 10
TYPE_FREQ            : 15
TYPE_INT             : 9
TYPE_STRING          : 12
TYPE_TIME            : 14
TYPE_VOL             : 16
UNIDAD               : 24 41 43
WAVE_FUNC            : 20
WAVE_TYPE            : 20
error                : 

Nonterminals, with rules where they appear

argumento            : 37 38
argumentos           : 20 37
expresion            : 8 19 22 31 31 32 32 33 33 34 34 35 36
instruccion          : 1 2
instruccion_asignacion : 3
instruccion_play     : 6
instruccion_return   : 7
instruccion_track    : 5
instruccion_wave     : 4
lista_elementos      : 21 35
programa             : 1 0
tipo_dato            : 19

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . instruccion programa
    (2) programa -> . instruccion
    (3) instruccion -> . instruccion_asignacion
    (4) instruccion -> . instruccion_wave
    (5) instruccion -> . instruccion_track
    (6) instruccion -> . instruccion_play
    (7) instruccion -> . instruccion_return
    (19) instruccion_asignacion -> . tipo_dato ID IGUAL expresion PUNTOYCOMA
    (20) instruccion_wave -> . WAVE_TYPE ID IGUAL WAVE_FUNC PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA
    (21) instruccion_track -> . TRACK ID IGUAL CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA
    (22) instruccion_play -> . ENGINE PUNTO PLAY PAREN_IZQ expresion PAREN_DER PUNTOYCOMA
    (8) instruccion_return -> . RETURN PAREN_IZQ expresion PAREN_DER PUNTOYCOMA
    (9) tipo_dato -> . TYPE_INT
    (10) tipo_dato -> . TYPE_FLOAT
    (11) tipo_dato -> . TYPE_BOOL
    (12) tipo_dato -> . TYPE_STRING
    (13) tipo_dato -> . TYPE_ARRAY
    (14) tipo_dato -> . TYPE_TIME
    (15) tipo_dato -> . TYPE_FREQ
    (16) tipo_dato -> . TYPE_VOL
    (17) tipo_dato -> . TYPE_ENV
    (18) tipo_dato -> . TYPE_CORO

    WAVE_TYPE       shift and go to state 9
    TRACK           shift and go to state 10
    ENGINE          shift and go to state 11
    RETURN          shift and go to state 12
    TYPE_INT        shift and go to state 13
    TYPE_FLOAT      shift and go to state 14
    TYPE_BOOL       shift and go to state 15
    TYPE_STRING     shift and go to state 16
    TYPE_ARRAY      shift and go to state 17
    TYPE_TIME       shift and go to state 18
    TYPE_FREQ       shift and go to state 19
    TYPE_VOL        shift and go to state 20
    TYPE_ENV        shift and go to state 21
    TYPE_CORO       shift and go to state 22

    programa                       shift and go to state 1
    instruccion                    shift and go to state 2
    instruccion_asignacion         shift and go to state 3
    instruccion_wave               shift and go to state 4
    instruccion_track              shift and go to state 5
    instruccion_play               shift and go to state 6
    instruccion_return             shift and go to state 7
    tipo_dato                      shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> instruccion . programa
    (2) programa -> instruccion .
    (1) programa -> . instruccion programa
    (2) programa -> . instruccion
    (3) instruccion -> . instruccion_asignacion
    (4) instruccion -> . instruccion_wave
    (5) instruccion -> . instruccion_track
    (6) instruccion -> . instruccion_play
    (7) instruccion -> . instruccion_return
    (19) instruccion_asignacion -> . tipo_dato ID IGUAL expresion PUNTOYCOMA
    (20) instruccion_wave -> . WAVE_TYPE ID IGUAL WAVE_FUNC PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA
    (21) instruccion_track -> . TRACK ID IGUAL CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA
    (22) instruccion_play -> . ENGINE PUNTO PLAY PAREN_IZQ expresion PAREN_DER PUNTOYCOMA
    (8) instruccion_return -> . RETURN PAREN_IZQ expresion PAREN_DER PUNTOYCOMA
    (9) tipo_dato -> . TYPE_INT
    (10) tipo_dato -> . TYPE_FLOAT
    (11) tipo_dato -> . TYPE_BOOL
    (12) tipo_dato -> . TYPE_STRING
    (13) tipo_dato -> . TYPE_ARRAY
    (14) tipo_dato -> . TYPE_TIME
    (15) tipo_dato -> . TYPE_FREQ
    (16) tipo_dato -> . TYPE_VOL
    (17) tipo_dato -> . TYPE_ENV
    (18) tipo_dato -> . TYPE_CORO

    $end            reduce using rule 2 (programa -> instruccion .)
    WAVE_TYPE       shift and go to state 9
    TRACK           shift and go to state 10
    ENGINE          shift and go to state 11
    RETURN          shift and go to state 12
    TYPE_INT        shift and go to state 13
    TYPE_FLOAT      shift and go to state 14
    TYPE_BOOL       shift and go to state 15
    TYPE_STRING     shift and go to state 16
    TYPE_ARRAY      shift and go to state 17
    TYPE_TIME       shift and go to state 18
    TYPE_FREQ       shift and go to state 19
    TYPE_VOL        shift and go to state 20
    TYPE_ENV        shift and go to state 21
    TYPE_CORO       shift and go to state 22

    instruccion                    shift and go to state 2
    programa                       shift and go to state 23
    instruccion_asignacion         shift and go to state 3
    instruccion_wave               shift and go to state 4
    instruccion_track              shift and go to state 5
    instruccion_play               shift and go to state 6
    instruccion_return             shift and go to state 7
    tipo_dato                      shift and go to state 8

state 3

    (3) instruccion -> instruccion_asignacion .

    WAVE_TYPE       reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TRACK           reduce using rule 3 (instruccion -> instruccion_asignacion .)
    ENGINE          reduce using rule 3 (instruccion -> instruccion_asignacion .)
    RETURN          reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_INT        reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_FLOAT      reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_BOOL       reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_STRING     reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_ARRAY      reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_TIME       reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_FREQ       reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_VOL        reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_ENV        reduce using rule 3 (instruccion -> instruccion_asignacion .)
    TYPE_CORO       reduce using rule 3 (instruccion -> instruccion_asignacion .)
    $end            reduce using rule 3 (instruccion -> instruccion_asignacion .)


state 4

    (4) instruccion -> instruccion_wave .

    WAVE_TYPE       reduce using rule 4 (instruccion -> instruccion_wave .)
    TRACK           reduce using rule 4 (instruccion -> instruccion_wave .)
    ENGINE          reduce using rule 4 (instruccion -> instruccion_wave .)
    RETURN          reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_INT        reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_FLOAT      reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_BOOL       reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_STRING     reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_ARRAY      reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_TIME       reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_FREQ       reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_VOL        reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_ENV        reduce using rule 4 (instruccion -> instruccion_wave .)
    TYPE_CORO       reduce using rule 4 (instruccion -> instruccion_wave .)
    $end            reduce using rule 4 (instruccion -> instruccion_wave .)


state 5

    (5) instruccion -> instruccion_track .

    WAVE_TYPE       reduce using rule 5 (instruccion -> instruccion_track .)
    TRACK           reduce using rule 5 (instruccion -> instruccion_track .)
    ENGINE          reduce using rule 5 (instruccion -> instruccion_track .)
    RETURN          reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_INT        reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_FLOAT      reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_BOOL       reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_STRING     reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_ARRAY      reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_TIME       reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_FREQ       reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_VOL        reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_ENV        reduce using rule 5 (instruccion -> instruccion_track .)
    TYPE_CORO       reduce using rule 5 (instruccion -> instruccion_track .)
    $end            reduce using rule 5 (instruccion -> instruccion_track .)


state 6

    (6) instruccion -> instruccion_play .

    WAVE_TYPE       reduce using rule 6 (instruccion -> instruccion_play .)
    TRACK           reduce using rule 6 (instruccion -> instruccion_play .)
    ENGINE          reduce using rule 6 (instruccion -> instruccion_play .)
    RETURN          reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_INT        reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_FLOAT      reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_BOOL       reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_STRING     reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_ARRAY      reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_TIME       reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_FREQ       reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_VOL        reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_ENV        reduce using rule 6 (instruccion -> instruccion_play .)
    TYPE_CORO       reduce using rule 6 (instruccion -> instruccion_play .)
    $end            reduce using rule 6 (instruccion -> instruccion_play .)


state 7

    (7) instruccion -> instruccion_return .

    WAVE_TYPE       reduce using rule 7 (instruccion -> instruccion_return .)
    TRACK           reduce using rule 7 (instruccion -> instruccion_return .)
    ENGINE          reduce using rule 7 (instruccion -> instruccion_return .)
    RETURN          reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_INT        reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_FLOAT      reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_BOOL       reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_STRING     reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_ARRAY      reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_TIME       reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_FREQ       reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_VOL        reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_ENV        reduce using rule 7 (instruccion -> instruccion_return .)
    TYPE_CORO       reduce using rule 7 (instruccion -> instruccion_return .)
    $end            reduce using rule 7 (instruccion -> instruccion_return .)


state 8

    (19) instruccion_asignacion -> tipo_dato . ID IGUAL expresion PUNTOYCOMA

    ID              shift and go to state 24


state 9

    (20) instruccion_wave -> WAVE_TYPE . ID IGUAL WAVE_FUNC PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA

    ID              shift and go to state 25


state 10

    (21) instruccion_track -> TRACK . ID IGUAL CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA

    ID              shift and go to state 26


state 11

    (22) instruccion_play -> ENGINE . PUNTO PLAY PAREN_IZQ expresion PAREN_DER PUNTOYCOMA

    PUNTO           shift and go to state 27


state 12

    (8) instruccion_return -> RETURN . PAREN_IZQ expresion PAREN_DER PUNTOYCOMA

    PAREN_IZQ       shift and go to state 28


state 13

    (9) tipo_dato -> TYPE_INT .

    ID              reduce using rule 9 (tipo_dato -> TYPE_INT .)


state 14

    (10) tipo_dato -> TYPE_FLOAT .

    ID              reduce using rule 10 (tipo_dato -> TYPE_FLOAT .)


state 15

    (11) tipo_dato -> TYPE_BOOL .

    ID              reduce using rule 11 (tipo_dato -> TYPE_BOOL .)


state 16

    (12) tipo_dato -> TYPE_STRING .

    ID              reduce using rule 12 (tipo_dato -> TYPE_STRING .)


state 17

    (13) tipo_dato -> TYPE_ARRAY .

    ID              reduce using rule 13 (tipo_dato -> TYPE_ARRAY .)


state 18

    (14) tipo_dato -> TYPE_TIME .

    ID              reduce using rule 14 (tipo_dato -> TYPE_TIME .)


state 19

    (15) tipo_dato -> TYPE_FREQ .

    ID              reduce using rule 15 (tipo_dato -> TYPE_FREQ .)


state 20

    (16) tipo_dato -> TYPE_VOL .

    ID              reduce using rule 16 (tipo_dato -> TYPE_VOL .)


state 21

    (17) tipo_dato -> TYPE_ENV .

    ID              reduce using rule 17 (tipo_dato -> TYPE_ENV .)


state 22

    (18) tipo_dato -> TYPE_CORO .

    ID              reduce using rule 18 (tipo_dato -> TYPE_CORO .)


state 23

    (1) programa -> instruccion programa .

    $end            reduce using rule 1 (programa -> instruccion programa .)


state 24

    (19) instruccion_asignacion -> tipo_dato ID . IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 29


state 25

    (20) instruccion_wave -> WAVE_TYPE ID . IGUAL WAVE_FUNC PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA

    IGUAL           shift and go to state 30


state 26

    (21) instruccion_track -> TRACK ID . IGUAL CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA

    IGUAL           shift and go to state 31


state 27

    (22) instruccion_play -> ENGINE PUNTO . PLAY PAREN_IZQ expresion PAREN_DER PUNTOYCOMA

    PLAY            shift and go to state 32


state 28

    (8) instruccion_return -> RETURN PAREN_IZQ . expresion PAREN_DER PUNTOYCOMA
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 33

state 29

    (19) instruccion_asignacion -> tipo_dato ID IGUAL . expresion PUNTOYCOMA
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 42

state 30

    (20) instruccion_wave -> WAVE_TYPE ID IGUAL . WAVE_FUNC PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA

    WAVE_FUNC       shift and go to state 43


state 31

    (21) instruccion_track -> TRACK ID IGUAL . CORCHETE_IZQ lista_elementos CORCHETE_DER PUNTOYCOMA

    CORCHETE_IZQ    shift and go to state 44


state 32

    (22) instruccion_play -> ENGINE PUNTO PLAY . PAREN_IZQ expresion PAREN_DER PUNTOYCOMA

    PAREN_IZQ       shift and go to state 45


state 33

    (8) instruccion_return -> RETURN PAREN_IZQ expresion . PAREN_DER PUNTOYCOMA
    (31) expresion -> expresion . CONCAT expresion
    (32) expresion -> expresion . PLUS expresion
    (33) expresion -> expresion . MINUS expresion
    (34) expresion -> expresion . TIMES expresion

    PAREN_DER       shift and go to state 46
    CONCAT          shift and go to state 47
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    TIMES           shift and go to state 50


state 34

    (23) expresion -> ID .

    PAREN_DER       reduce using rule 23 (expresion -> ID .)
    CONCAT          reduce using rule 23 (expresion -> ID .)
    PLUS            reduce using rule 23 (expresion -> ID .)
    MINUS           reduce using rule 23 (expresion -> ID .)
    TIMES           reduce using rule 23 (expresion -> ID .)
    PUNTOYCOMA      reduce using rule 23 (expresion -> ID .)
    COMA            reduce using rule 23 (expresion -> ID .)
    CORCHETE_DER    reduce using rule 23 (expresion -> ID .)


state 35

    (24) expresion -> UNIDAD .

    PAREN_DER       reduce using rule 24 (expresion -> UNIDAD .)
    CONCAT          reduce using rule 24 (expresion -> UNIDAD .)
    PLUS            reduce using rule 24 (expresion -> UNIDAD .)
    MINUS           reduce using rule 24 (expresion -> UNIDAD .)
    TIMES           reduce using rule 24 (expresion -> UNIDAD .)
    PUNTOYCOMA      reduce using rule 24 (expresion -> UNIDAD .)
    COMA            reduce using rule 24 (expresion -> UNIDAD .)
    CORCHETE_DER    reduce using rule 24 (expresion -> UNIDAD .)


state 36

    (25) expresion -> NUMERO .

    PAREN_DER       reduce using rule 25 (expresion -> NUMERO .)
    CONCAT          reduce using rule 25 (expresion -> NUMERO .)
    PLUS            reduce using rule 25 (expresion -> NUMERO .)
    MINUS           reduce using rule 25 (expresion -> NUMERO .)
    TIMES           reduce using rule 25 (expresion -> NUMERO .)
    PUNTOYCOMA      reduce using rule 25 (expresion -> NUMERO .)
    COMA            reduce using rule 25 (expresion -> NUMERO .)
    CORCHETE_DER    reduce using rule 25 (expresion -> NUMERO .)


state 37

    (26) expresion -> CADENA .

    PAREN_DER       reduce using rule 26 (expresion -> CADENA .)
    CONCAT          reduce using rule 26 (expresion -> CADENA .)
    PLUS            reduce using rule 26 (expresion -> CADENA .)
    MINUS           reduce using rule 26 (expresion -> CADENA .)
    TIMES           reduce using rule 26 (expresion -> CADENA .)
    PUNTOYCOMA      reduce using rule 26 (expresion -> CADENA .)
    COMA            reduce using rule 26 (expresion -> CADENA .)
    CORCHETE_DER    reduce using rule 26 (expresion -> CADENA .)


state 38

    (27) expresion -> TRUE .

    PAREN_DER       reduce using rule 27 (expresion -> TRUE .)
    CONCAT          reduce using rule 27 (expresion -> TRUE .)
    PLUS            reduce using rule 27 (expresion -> TRUE .)
    MINUS           reduce using rule 27 (expresion -> TRUE .)
    TIMES           reduce using rule 27 (expresion -> TRUE .)
    PUNTOYCOMA      reduce using rule 27 (expresion -> TRUE .)
    COMA            reduce using rule 27 (expresion -> TRUE .)
    CORCHETE_DER    reduce using rule 27 (expresion -> TRUE .)


state 39

    (28) expresion -> FALSE .

    PAREN_DER       reduce using rule 28 (expresion -> FALSE .)
    CONCAT          reduce using rule 28 (expresion -> FALSE .)
    PLUS            reduce using rule 28 (expresion -> FALSE .)
    MINUS           reduce using rule 28 (expresion -> FALSE .)
    TIMES           reduce using rule 28 (expresion -> FALSE .)
    PUNTOYCOMA      reduce using rule 28 (expresion -> FALSE .)
    COMA            reduce using rule 28 (expresion -> FALSE .)
    CORCHETE_DER    reduce using rule 28 (expresion -> FALSE .)


state 40

    (29) expresion -> NOTA_MUSICAL .

    PAREN_DER       reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    CONCAT          reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    PLUS            reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    MINUS           reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    TIMES           reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    PUNTOYCOMA      reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    COMA            reduce using rule 29 (expresion -> NOTA_MUSICAL .)
    CORCHETE_DER    reduce using rule 29 (expresion -> NOTA_MUSICAL .)


state 41

    (30) expresion -> IMPORT . PAREN_IZQ CADENA PAREN_DER

    PAREN_IZQ       shift and go to state 51


state 42

    (19) instruccion_asignacion -> tipo_dato ID IGUAL expresion . PUNTOYCOMA
    (31) expresion -> expresion . CONCAT expresion
    (32) expresion -> expresion . PLUS expresion
    (33) expresion -> expresion . MINUS expresion
    (34) expresion -> expresion . TIMES expresion

    PUNTOYCOMA      shift and go to state 52
    CONCAT          shift and go to state 47
    PLUS            shift and go to state 48
    MINUS           shift and go to state 49
    TIMES           shift and go to state 50


state 43

    (20) instruccion_wave -> WAVE_TYPE ID IGUAL WAVE_FUNC . PAREN_IZQ argumentos PAREN_DER PUNTOYCOMA

    PAREN_IZQ       shift and go to state 53


state 44

    (21) instruccion_track -> TRACK ID IGUAL CORCHETE_IZQ . lista_elementos CORCHETE_DER PUNTOYCOMA
    (35) lista_elementos -> . expresion COMA lista_elementos
    (36) lista_elementos -> . expresion
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    lista_elementos                shift and go to state 54
    expresion                      shift and go to state 55

state 45

    (22) instruccion_play -> ENGINE PUNTO PLAY PAREN_IZQ . expresion PAREN_DER PUNTOYCOMA
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 56

state 46

    (8) instruccion_return -> RETURN PAREN_IZQ expresion PAREN_DER . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 57


state 47

    (31) expresion -> expresion CONCAT . expresion
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 58

state 48

    (32) expresion -> expresion PLUS . expresion
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 59

state 49

    (33) expresion -> expresion MINUS . expresion
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 60

state 50

    (34) expresion -> expresion TIMES . expresion
    (23) expresion -> . ID
    (24) expresion -> . UNIDAD
    (25) expresion -> . NUMERO
    (26) expresion -> . CADENA
    (27) expresion -> . TRUE
    (28) expresion -> . FALSE
    (29) expresion -> . NOTA_MUSICAL
    (30) expresion -> . IMPORT PAREN_IZQ CADENA PAREN_DER
    (31) expresion -> . expresion CONCAT expresion
    (32) expresion -> . expresion PLUS expresion
    (33) expresion -> . expresion MINUS expresion
    (34) expresion -> . expresion TIMES expresion

    ID              shift and go to state 34
    UNIDAD          shift and go to state 35
    NUMERO          shift and go to state 36
    CADENA          shift and go to state 37
    TRUE            shift and go to state 38
    FALSE           shift and go to state 39
    NOTA_MUSICAL    shift and go to state 40
    IMPORT          shift and go to state 41

    expresion                      shift and go to state 61

state 51

    (30) expresion -> IMPORT PAREN_IZQ . CADENA PAREN_DER

    CADENA          shift and go to state 62


state 52

    (19) instruccion_asignacion -> tipo_dato ID IGUAL expresion PUNTOYCOMA .
